<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">AC</string>
    <string name="decimal">.</string>
    <string name="addition">+</string>
    <string name="subtract">-</string>
    <string name ="multiply">x</string>
    <string name="division">÷</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name = "one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="RecalledValue">R: </string>
    <string name ="DIVIDEBYZEROERROR">ERROR</string>
    <string name="negative">±</string>
</resources>